--- a/PdfScribe/App.config
+++ b/PdfScribe/App.config
@@ -13,7 +13,7 @@
 		<sources>
 			<source name="PdfScribe" switchName="PdfScribeAll">
 				<listeners>
-					<add name="textwriterListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="PdfScribe_trace.log" traceOutputOptions="DateTime"/>
+					<add name="textwriterListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="AivikaVpd_trace.log" traceOutputOptions="DateTime"/>
 					<remove name="Default"/>
 					<clear/>
 					<!-- Remove the <clear /> element to turn on tracing output -->
@@ -26,18 +26,18 @@
 	</system.diagnostics>
 	<applicationSettings>
 		<PdfScribe.Properties.Settings>
-   <setting name="OutputFile" serializeAs="String">
-    <value>%UserProfile%\PDFSCRIBE.PDF</value>
-   </setting>
-   <setting name="OpenAfterCreating" serializeAs="String">
-    <value>False</value>
-   </setting>
-   <setting name="AskUserForOutputFilename" serializeAs="String">
-    <value>True</value>
-   </setting>
-   <setting name="StripNoRedistill" serializeAs="String">
-    <value>True</value>
-   </setting>
-  </PdfScribe.Properties.Settings>
+		   <setting name="OpenAfterCreating" serializeAs="String">
+			<value>False</value>
+		   </setting>
+		   <setting name="AskUserForOutputFilename" serializeAs="String">
+			<value>True</value>
+		   </setting>
+		   <setting name="StripNoRedistill" serializeAs="String">
+			<value>True</value>
+		   </setting>
+		   <setting name="OutputFile" serializeAs="String">
+			<value>%UserProfile%\AIVIKAVPD.PDF</value>
+		   </setting>
+		</PdfScribe.Properties.Settings>
 	</applicationSettings>
 </configuration>
