--- a/PdfScribe/Properties/Settings.settings
+++ b/PdfScribe/Properties/Settings.settings
@@ -2,9 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="PdfScribe.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="OutputFile" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">%UserProfile%\PDFSCRIBE.PDF</Value>
-    </Setting>
     <Setting Name="OpenAfterCreating" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
@@ -13,6 +10,9 @@
     </Setting>
     <Setting Name="StripNoRedistill" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="OutputFile" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">%UserProfile%\AIVIKAVPD.PDF</Value>
     </Setting>
   </Settings>
 </SettingsFile>
