--- a/PdfScribe/PdfScribe.csproj
+++ b/PdfScribe/PdfScribe.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PdfScribe</RootNamespace>
-    <AssemblyName>PdfScribe</AssemblyName>
+    <AssemblyName>AivikaVirtualPrinter</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -95,7 +95,8 @@
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
-    <ApplicationIcon>PrintCapture.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -147,6 +148,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="SetOutputFilename.resx">
       <DependentUpon>SetOutputFilename.cs</DependentUpon>
@@ -161,7 +163,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="PrintCapture.ico" />
+    <None Include="Resources\PrintCapture.ico" />
     <None Include="Resources\AdobeIcon.ico" />
     <Content Include="..\Lib\gsdll64.dll">
       <Link>gsdll64.dll</Link>
