--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -37,18 +37,19 @@ jobs:
     - name: goto build folder
       run: |
         cd PdfScribeInstall/bin/x64/Release/en-us;
+        ren *.msi AivikaVpd.msi
         dir;
       
     - name: upload release assets
       if: ${{ github.event_name != 'workflow_dispatch' }}
-      run:   gh release upload --clobber ${{ github.event.release.tag_name }} *.msi
+      run:   gh release upload --clobber ${{ github.event.release.tag_name }} AivikaVpd.msi
       env:
         GH_TOKEN: ${{ github.token }}
 
     # Upload to a release tag manually
     - name: Upload Release Assets Manual Trigger
       if: ${{ github.event_name == 'workflow_dispatch' && inputs.deploy_tag != '' }}
-      run:   gh release upload --clobber ${{ inputs.deploy_tag }} *.msi
+      run:   gh release upload --clobber ${{ inputs.deploy_tag }} AivikaVpd.msi
       env:
         GH_TOKEN: ${{ github.token }}
 
@@ -57,4 +58,4 @@ jobs:
       if: ${{ github.event_name == 'workflow_dispatch' && inputs.deploy_tag == '' }}
       with:
         name: my-artifact
-        path: '*.msi'
+        path: 'AivikaVpd.msi'
