powershell cannot use wildcard

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -37,7 +37,7 @@ jobs:
     - name: upload release assets
       if: ${{ github.event_name != 'workflow_dispatch' }}
       working-directory: ./PdfScribeInstall/bin/x64/Release/en-us
-      run:   gh release upload --clobber ${{ github.event.release.tag_name }} *.msi
+      run:   gh release upload --clobber ${{ github.event.release.tag_name }} (get-item *.msi)
       env:
         GH_TOKEN: ${{ github.token }}
 
@@ -45,7 +45,7 @@ jobs:
     - name: Upload Release Assets Manual Trigger
       if: ${{ github.event_name == 'workflow_dispatch' && inputs.deploy_tag != '' }}
       working-directory: ./PdfScribeInstall/bin/x64/Release/en-us
-      run:   gh release upload --clobber ${{ inputs.deploy_tag }} *.msi
+      run:   gh release upload --clobber ${{ inputs.deploy_tag }} (get-item *.msi)
       env:
         GH_TOKEN: ${{ github.token }}
 
