--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       deploy_tag:
-        required: true
+        required: false
         type: string
         default: ''
 
