--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       deploy_tag:
-        required: true
+        required: false
         type: string
         default: ''
 
@@ -48,3 +48,11 @@ jobs:
       run:   gh release upload --clobber ${{ inputs.deploy_tag }} (get-item *.msi)
       env:
         GH_TOKEN: ${{ github.token }}
+
+    # Upload as workflow artifact if deploy_tag is empty
+    - name: Upload as Artifact
+      if: ${{ github.event_name == 'workflow_dispatch' && inputs.deploy_tag == '' }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: PdfScribeInstaller
+        path: ./PdfScribeInstall/bin/x64/Release/en-us/*.msi
