--- a/PdfScribe/PdfScribe.csproj
+++ b/PdfScribe/PdfScribe.csproj
@@ -14,9 +14,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\PdfScribeInstallCustomAction\PdfScribeInstallCustomAction.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Reference Include="Microsoft.CSharp" />
 	  <Reference Include="System.Data.DataSetExtensions" />
 	  <Reference Include="System.Windows.Forms" />
+	  <Reference Include="WindowsBase" />
 	</ItemGroup>
 
 	<ItemGroup>
