--- a/Directory.build.props
+++ b/Directory.build.props
@@ -1,13 +1,13 @@
 <Project>
 	<PropertyGroup>
-		<Company>Black Telescope Workshop</Company>
+		<Company>Ubunye Holdings Pty. Ltd.</Company>
 		<Copyright>Copyright © 2014-2025</Copyright>
 		<AssemblyTrademark></AssemblyTrademark>
 		<AssemblyCulture></AssemblyCulture>
-		<Version>1.4.1</Version>
+		<Version>1.0.1</Version>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(Version)</FileVersion>
 		<ProductVersion>$(Version)</ProductVersion>
-		<ProductName>PDF Scribe</ProductName>
+		<ProductName>Aivika Virtual Printer</ProductName>
 	</PropertyGroup>
 </Project>
